Cambios menores, me voy
Cambios menores, me voy

--- a/.gitignore
+++ b/.gitignore
@@ -504,3 +504,12 @@
 /TotalSinAgrupar.png
 /TotalSinAgruparHammer.png
 /mwr_l2_processor.pyc
+/BandBeanList.pyc
+/Bean.pyc
+/Measure.pyc
+/MeasureList.pyc
+/MultiBandBeanDict.pyc
+/MultibandBean.pyc
+/hd5fileManager.pyc
+/img/nodetN.png
+/img/nodetS.png
