--- a/.gitignore
+++ b/.gitignore
@@ -513,3 +513,27 @@
 /hd5fileManager.pyc
 /img/nodetN.png
 /img/nodetS.png
+/output/EO_20130424_000704_CUSS_SACD_MWR_L2B_SCI_078_000_004.h5.tar.gz
+/output/EO_20130424_000704_CUSS_SACD_MWR_L2B_SCI_078_000_004.h5S.png
+/output/EO_20130424_014452_CUSS_SACD_MWR_L2B_SCI_071_000_004.h5.tar.gz
+/output/EO_20130424_014452_CUSS_SACD_MWR_L2B_SCI_071_000_004.h5S.png
+/output/EO_20130424_032240_CUSS_SACD_MWR_L2B_SCI_064_000_004.h5.tar.gz
+/output/EO_20130424_032240_CUSS_SACD_MWR_L2B_SCI_064_000_004.h5S.png
+/output/EO_20130424_063817_CUSS_SACD_MWR_L2B_SCI_050_000_004.h5.tar.gz
+/output/EO_20130424_063817_CUSS_SACD_MWR_L2B_SCI_050_000_004.h5S.png
+/output/EO_20130424_095353_CUSS_SACD_MWR_L2B_SCI_036_000_004.h5.tar.gz
+/output/EO_20130424_144718_CUSS_SACD_MWR_L2B_SCI_015_000_004.h5.tar.gz
+/output/EO_20130424_144718_CUSS_SACD_MWR_L2B_SCI_015_000_004.h5S.png
+/output/EO_20130424_180255_CUSS_SACD_MWR_L2B_SCI_001_000_004.h5.tar.gz
+/output/EO_20130424_180255_CUSS_SACD_MWR_L2B_SCI_001_000_004.h5S.png
+/output/EO_20130426_003316_CUSS_SACD_MWR_L2B_SCI_074_000_004.h5.tar.gz
+/output/EO_20130426_003316_CUSS_SACD_MWR_L2B_SCI_074_000_004.h5S.png
+/output/EO_20130430_173128_CUSS_SACD_MWR_L2B_SCI_003_000_004.h5.tar.gz
+/output/EO_20130430_173128_CUSS_SACD_MWR_L2B_SCI_003_000_004.h5S.png
+/output/EO_20130430_190916_CUSS_SACD_MWR_L2B_SCI_099_000_004.h5.tar.gz
+/output/EO_20130430_190916_CUSS_SACD_MWR_L2B_SCI_099_000_004.h5S.png
+/output/EO_20130430_204704_CUSS_SACD_MWR_L2B_SCI_092_000_004.h5.tar.gz
+/output/EO_20130430_204704_CUSS_SACD_MWR_L2B_SCI_092_000_004.h5S.png
+/EO_20130424_000704_CUSS_SACD_MWR_L2B_SCI_078_000_004.h5
+/HD5FileList.pyc
+/mwr_tie_points_finder.pyc
