cambios fin del dia

--- a/.gitignore
+++ b/.gitignore
@@ -798,3 +798,4 @@
 /output/EO_20130430_141551_CUSS_SACD_MWR_L2B_SCI_017_000_004.h5S.png
 /output/EO_20130430_155339_CUSS_SACD_MWR_L2B_SCI_010_000_004.h5.tar.gz
 /output/EO_20130430_155339_CUSS_SACD_MWR_L2B_SCI_010_000_004.h5S.png
+/.~lock.PracticoFinal2.docx#
