--- a/.gitignore
+++ b/.gitignore
@@ -1202,3 +1202,5 @@
 /p2output/Points sur, par.png
 /p2output/dgdp.txt
 /p3output/WholeSouth.png
+/p3output/EO_20130426.h5
+/p3output/WholeNorth.png
